@@ -65,7 +65,7 @@ setup(name='zope.session',
         'ZODB3',
         'zope.annotation',
         'zope.app.appsetup',
-        'zope.app.http',
+        'zope.datetime',
         'zope.component',
         'zope.i18nmessageid',
         'zope.interface',
