@@ -1,12 +1,0 @@
-BTrees
-ZODB
-persistent
-zope.component
-zope.interface
-zope.minmax
-zope.publisher
-zope.schema
-
-# TODO This dependency is bad.  It reflects use of a utility function
-# that should be copied elsewhere:
-zope.server
