@@ -1,3 +1,0 @@
-<data-files zopeskel/etc/package-includes>
-  zope.session-*.zcml
-</data-files>
